opam-version: "2.0"
synopsis: "A high-performance server for Irmin"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin"
doc: "https://irmin.org"
dev-repo: "git+ssh://github.com/mirage/irmin"
bug-reports: "https://github.com/mirage/irmin/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.5.0"}
  "optint" {>= "0.1.0"}
  "irmin" {= version}
  "ppx_irmin" {= version}
  "irmin-pack" {= version}
  "uri"
  "fmt"
  "cmdliner" {>= "1.0.4"}
  "logs" {>= "0.7.0"}
  "eio_main" {>= "0.15"}
  "lwt_eio" {>= "0.5.1"}
  "lwt" {>= "5.4.0"}
  "conduit-lwt-unix" {>= "6.0.0"}
  "websocket-lwt-unix"
  "cohttp-lwt-unix"
  "ppx_blob" {>= "0.7.2"}
  "digestif" {>= "1.1.4"}
  "irmin-watcher" {= "dev" & with-test}
  "irmin-test" {= version & with-test}
]

pin-depends: [
  [ "irmin-watcher.dev" "git+https://github.com/patricoferris/irmin-watcher#d0e92b4ba5631b5f4dc0f3c00d97e79542dba45d" ]
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
