opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "irmin"        {= version}
  "ppx_irmin"    {= version}
  "ocaml"        {>= "4.02.3"}
  "dune"         {>= "3.5.0"}
  "mtime"        {>= "2.0.0"}
  "astring"
  "fmt"
  "jsonm"
  "logs"
  "lwt"          {>= "5.3.0"}
  "eio"          {>= "0.15"}
  "eio_main"     {>= "0.15"}
  "alcotest"     {>= "dev"}
  "qcheck-alcotest" {with-test & >= "0.21.1"}
  "metrics"      {>= "0.4.1"}
  "metrics-unix" {>= "0.4.1"}
  "ocaml-syntax-shims"
  "cmdliner"
  "hex" {with-test & >= "1.4.0"}
  "vector" {with-test & >= "1.0.0"}
  "alcotest" {>= "1.7.0" & with-test}
  "qcheck-alcotest" {>= "0.21.1" & with-test}
]

pin-depends: [
  # Fix race in formatters
  [ "alcotest.dev" "git+https://github.com/haesbaert/alcotest#99030be1df12a17fc2a0f3d00b181cd31cf6b0d4" ]
]

synopsis: "Irmin test suite"
description: """
`irmin-test` provides access to the Irmin test suite for testing storage backend
implementations.
"""
