opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "irmin"        {= version}
  "ppx_irmin"    {= version}
  "ocaml"        {>= "5.1.0"}
  "dune"         {>= "3.5.0"}
  "mtime"        {>= "2.0.0"}
  "astring"
  "fmt"
  "jsonm"
  "logs"
  "lwt"          {>= "5.3.0"}
  "eio"          {>= "1.0"}
  "eio_main"     {>= "0.15"}
  "alcotest"     {>= "1.8.0"}
  "qcheck-alcotest" {with-test & >= "0.21.1"}
  "metrics"      {>= "0.4.1"}
  "metrics-unix" {>= "0.4.1"}
  "ocaml-syntax-shims"
  "cmdliner"     {>= "1.3.0"}
  "metrics" {>= "0.2.0"}
  "hex" {with-test & >= "1.4.0"}
  "vector" {with-test & >= "1.0.0"}
  "alcotest" {>= "1.7.0" & with-test}
  "qcheck-alcotest" {>= "0.21.1" & with-test}
]

synopsis: "Irmin test suite"
description: """
`irmin-test` provides access to the Irmin test suite for testing storage backend
implementations.
"""
x-maintenance-intent: [ "(latest)" ]
