opam-version: "2.0"
synopsis: "Irmin implementation of the Tezos context hash specification"
description: "Irmin implementation of the Tezos context hash specification"
maintainer: "Tarides <contact@tarides.com>"
authors: ["Thomas Gazagnaire <thomas@gazagnaire.org>"]
license: "MIT"
homepage: "https://github.com/mirage/irmin"
bug-reports: "https://github.com/mirage/irmin/issues"
depends: [
  "dune" {>= "2.7"}
  "irmin" {>= version}
  "irmin-pack" {= version}
  "ppx_irmin" {= version}
  "tezos-base58"
  "digestif" {>= "0.7"}
  "cmdliner"
  "fmt"
  "yojson"
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@runtest" {with-test}]
]
dev-repo: "git+https://github.com/mirage/irmin.git"
