opam-version: "2.0"
synopsis: "Irmin implementation of the Tezos context hash specification"
description: "Irmin implementation of the Tezos context hash specification"
maintainer: "Tarides <contact@tarides.com>"
authors: ["Thomas Gazagnaire <thomas@gazagnaire.org>"]
license: "ISC"
homepage: "https://github.com/mirage/irmin"
bug-reports: "https://github.com/mirage/irmin/issues"
depends: [
  "dune" {>= "3.5.0"}
  "irmin" {>= version}
  "irmin-pack" {= version}
  "ppx_irmin" {= version}
  "tezos-base58"
  "digestif" {>= "0.7"}
  "cmdliner"
  "fmt"
  "yojson"
  "alcotest" {with-test}
  "hex" {with-test & >= "1.4.0"}
  "fpath" {with-test}
  "irmin-test" {with-test & = version}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test & arch != "arm32" & arch != "x86_32"}]

]
dev-repo: "git+https://github.com/mirage/irmin.git"
