opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"   {>= "4.07.0"}
  "dune"    {>= "2.5.1"}
  "fmt"     {>= "0.8.0"}
  "uutf"
  "jsonm"   {>= "1.0.0"}
  "base64"  {>= "2.0.0"}
  "irmin" {with-test & post & = version}
  "alcotest" {>= "1.1.0" & with-test}
  "alcotest-lwt" {with-test}
]
synopsis: """
Private type dynamic type representations used in the implementation of Irmin.
Provides no stability guarantee
"""
description: """
!!!!!!!!!!!!!!!!!!!!
!!!!! UNSTABLE !!!!!
!!!!!!!!!!!!!!!!!!!!

This package defines a library of combinators for building dynamic type
representations and a set of generic operations over representable types.

It is not intended for public consumption and provides no stability guarantee.
"""
