opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"         {>= "4.01.0"}
  "dune"          {build & >= "1.1.0"}
  "irmin"         {>= "1.3.0"}
  "irmin-mem"     {>= "1.3.0"}
  "irmin-git"     {>= "1.3.0"}
  "irmin-http"    {>= "1.3.0"}
  "irmin-fs"      {>= "1.3.0"}
  "irmin-graphql"
  "git-unix"      {>= "1.11.4"}
  "digestif"      {>= "0.6.1"}
  "irmin-watcher" {>= "0.2.0"}
  "yaml"          {>= "0.1.0"}
  "irmin-test"    {with-test}
]

synopsis: "Unix backends for Irmin"
description: """
`Irmin_unix` defines Unix backends (including Git and HTTP) for Irmin, as well
as a very simple CLI tool (called `irmin`) to manipulate and inspect Irmin
stores.
"""
