opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"         {>= "4.01.0"}
  "dune"          {>= "2.7.0"}
  "irmin"         {= version}
  "irmin-mem"     {= version}
  "irmin-git"     {= version}
  "irmin-http"    {= version}
  "irmin-fs"      {= version}
  "irmin-pack"    {= version}
  "irmin-graphql" {= version}
  "irmin-layers"  {= version}
  "git-unix"
  "digestif"      {>= "0.9.0"}
  "irmin-watcher" {>= "0.2.0"}
  "yaml"          {>= "0.1.0"}
  "astring"
  "astring"
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "conduit"
  "conduit-lwt"
  "conduit-lwt-unix"
  "logs"
  "uri"
  "cmdliner"
  "cohttp-lwt-unix"
  "fmt"
  "git"
  "git-cohttp-unix"
  "lwt"
  "irmin-test"    {with-test & = version}
  "alcotest"      {with-test}
]

pin-depends: [
  [ "git.dev" "git+https://github.com/mirage/ocaml-git.git#b8a1d07147cbc8d5f8a563055b84fd166da9d0a0" ]
  [ "git-nss.dev" "git+https://github.com/mirage/ocaml-git.git#b8a1d07147cbc8d5f8a563055b84fd166da9d0a0" ]
  [ "git-cohttp.dev" "git+https://github.com/mirage/ocaml-git.git#b8a1d07147cbc8d5f8a563055b84fd166da9d0a0" ]
  [ "git-cohttp-unix.dev" "git+https://github.com/mirage/ocaml-git.git#b8a1d07147cbc8d5f8a563055b84fd166da9d0a0" ]
  [ "git-unix.dev" "git+https://github.com/mirage/ocaml-git.git#b8a1d07147cbc8d5f8a563055b84fd166da9d0a0" ]
  [ "carton.dev" "git+https://github.com/mirage/ocaml-git.git#b8a1d07147cbc8d5f8a563055b84fd166da9d0a0" ]
  [ "carton-git.dev" "git+https://github.com/mirage/ocaml-git.git#b8a1d07147cbc8d5f8a563055b84fd166da9d0a0" ]
  [ "carton-lwt.dev" "git+https://github.com/mirage/ocaml-git.git#b8a1d07147cbc8d5f8a563055b84fd166da9d0a0" ]
  [ "mimic.dev" "git+https://github.com/mirage/ocaml-git.git#b8a1d07147cbc8d5f8a563055b84fd166da9d0a0" ]
  [ "awa.dev" "git+https://github.com/mirage/awa-ssh.git#c337fbac71e3699ba4bcefe9382c9842354b3bee" ]
  [ "awa-mirage.dev" "git+https://github.com/mirage/awa-ssh.git#c337fbac71e3699ba4bcefe9382c9842354b3bee" ]
]

synopsis: "Unix backends for Irmin"
description: """
`Irmin_unix` defines Unix backends (including Git and HTTP) for Irmin, as well
as a very simple CLI tool (called `irmin`) to manipulate and inspect Irmin
stores.
"""
