opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

available: arch != "arm32" & arch != "x86_32"

depends: [
  "ocaml"         {>= "4.01.0"}
  "dune"          {>= "2.7.0"}
  "irmin"         {= version}
  "irmin-git"     {= version}
  "irmin-http"    {= version}
  "irmin-fs"      {= version}
  "irmin-pack"    {= version}
  "irmin-graphql" {= version}
  "irmin-layers"  {= version}
  "git-unix"      {>= "3.4.0"}
  "digestif"      {>= "0.9.0"}
  "irmin-watcher" {>= "0.2.0"}
  "yaml"          {>= "0.1.0"}
  "astring"
  "astring"
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "conduit"
  "conduit-lwt"
  "conduit-lwt-unix"
  "logs"
  "uri"
  "cmdliner"
  "cohttp-lwt-unix"
  "fmt"
  "git"             {>= "3.4.0"}
  "git-cohttp-unix" {>= "3.4.0"}
  "lwt"           {>= "5.3.0"}
  "irmin-test"    {with-test & = version}
  "alcotest"      {with-test}
]

synopsis: "Unix backends for Irmin"
description: """
`Irmin_unix` defines Unix backends (including Git and HTTP) for Irmin, as well
as a very simple CLI tool (called `irmin`) to manipulate and inspect Irmin
stores.
"""
