opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"   {>= "4.08.0"}
  "dune"    {>= "2.9.0"}
  "repr"    {>= "0.6.0"}
  "fmt"     {>= "0.8.5"}
  "uri"     {>= "1.3.12"}
  "uutf"
  "jsonm"   {>= "1.0.0"}
  "eio"     {>= "0.6"}
  "digestif" {>= "0.9.0"}
  "ocamlgraph"
  "logs"    {>= "0.5.0"}
  "bheap" {>= "2.0.0"}
  "astring"
  "mtime" {>= "2.0.0"}
  "bigstringaf" { >= "0.2.0" }
  "ppx_irmin" {= version}
  "hex"      {with-test}
  "alcotest" {= "dev" & with-test}
  "eio_main" {>= "0.2" & with-test}
  "qcheck-alcotest" {with-test}
  "vector" {with-test}
  "odoc" {(< "2.0.1" | > "2.0.2") & with-doc} # See https://github.com/ocaml/odoc/issues/793
  "bisect_ppx" {dev & >= "2.5.0"}
]

pin-depends: [
  # Metrics may have been unnecessarily constrained in opam-repository
  [ "metrics.dev" "git+https://github.com/mirage/metrics#995eb18d2837df02c8ead719c00fb156cf475ab5"]
  [ "metrics-unix.dev" "git+https://github.com/mirage/metrics#995eb18d2837df02c8ead719c00fb156cf475ab5"]
  # Fix race in formatters
  [ "alcotest.dev" "git+https://github.com/haesbaert/alcotest#99030be1df12a17fc2a0f3d00b181cd31cf6b0d4" ]
  [ "alcotest-lwt.dev" "git+https://github.com/haesbaert/alcotest#99030be1df12a17fc2a0f3d00b181cd31cf6b0d4" ]
]

conflicts: [
  "result" {< "1.5"} # Requires `Result = Stdlib.Result`
]

synopsis: """
Irmin, a distributed database that follows the same design principles as Git
"""
description: """
Irmin is a library for persistent stores with built-in snapshot,
branching and reverting mechanisms. It is designed to use a large
variety of backends. Irmin is written in pure OCaml and does not
depend on external C stubs; it aims to run everywhere, from Linux,
to browsers and Xen unikernels.
"""
