opam-version: "2.0"
synopsis: "C bindings for irmin"
description: "C bindings for irmin using Ctypes inverted stubs"
maintainer: ["zachshipko@gmail.com"]
authors: ["Zach Shipko"]
license: "ISC"
homepage: "https://github.com/mirage/irmin"
bug-reports: "https://github.com/mirage/irmin/issues"
depends: [
  "dune" {>= "2.9"}
  "ctypes" {>= "0.19"}
  "ctypes-foreign" {>= "0.18"}
  "irmin-unix" {= version}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/irmin.git"

available: [ arch != "arm64" ] # disabled because of SEGFAULT
