opam-version: "2.0"
maintainer: "Craig Ferguson <craig@tarides.com>"
author: "Craig Ferguson <craig@tarides.com>"
homepage: "https://github.com/mirage/irmin"
bug-reports: "https://github.com/mirage/irmin/issues"
license: "ISC"
dev-repo: "git+https://github.com/mirage/irmin.git"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune" {>= "2.7.0"}
  "ppx_repr" {>= "0.2.0"}
]

synopsis: "PPX deriver for Irmin type representations"
