opam-version: "2.0"
maintainer: "Craig Ferguson <craig@tarides.com>"
author: "Craig Ferguson <craig@tarides.com>"
homepage: "https://github.com/mirage/irmin"
bug-reports: "https://github.com/mirage/irmin/issues"
license: "ISC"
dev-repo: "git+https://github.com/mirage/irmin.git"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.10.0"}
  "dune" {>= "3.5.0"}
  "ppx_repr" {>= "0.2.0"}
  "ppxlib" {>= "0.12.0"}
  "logs" {>= "0.5.0"}
  "fmt" {with-test & >= "0.8.0"}
  "bisect_ppx" {dev & >= "2.5.0"}
]

synopsis: "PPX deriver for Irmin type representations"
